K8S/test/hpa.yaml
apiVersion: autoscaling/v2
kind: HorizontalAutoscaler

metadata:
  name: my-api-hpa

spec:
  scaleTargetRef:
  apiVersion: apps/v1
  kind: Deployment
  name: my-api

  minReplicas: 2
  maxReplicas: 10

  metrics:
    - type: Resource
      resource:
        name: cpu
        target: 
          type: Utilization
          averageUtilization: 70
    
    - type: Resource
      resource:
        name: memory
        target:
          type: Utilization
          averageUtilization: 80
