K8S/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: my-api-ingress

spec:
  ingressClassName: nginx
  
  ruels:
    - host: api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-api-service
                port:
                  number: 80

          - path: /auth
            pathType: Prefix
            backend:
              service:
                  name: auth-service
              port:
                number: 80
