K8S/test/loadbalancer.yaml
apiVersion: v1
kind: Service

metadata:
  name: me-api-loadbalancer


spec:
  selector:
    app: my-api
  
  type: Loadbalancer

  ports:
    - protocol: TCP
      port: 80
      TargetPort: 8080
