K8S/test/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

spec:
  podSelector:
  matchLabels:
    app: my-api

  policyTypes:
    - Ingress
    - Egress

  ingress:

    - from:
      - namespaceSelector:
          matchLabel:
            name: frontend
      - podSelector:
          matchLabels:
            role: frontend

      ports:
        - protocol: TCP
          port: 8080

  egress:
    - ports:
        - protocol: TCP
          port: 443
