K8S/test/node-port.yaml
apiVersion: v1
kind: Service

metadata:
  name: my-api-nodeport

spec:
  type: NodePort

  selector:
    app: my-api
  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
