K8S/test/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: my-api-Service

spec:

  selector:
    app: ma-api
  
  ports:
    - protocol: TCP

      port: 80
      targetPort: 8080

  type: ClusterIP

  #my-api-service:80 -> Pod:8080
